style.css
* {
    box-sizing: border-box;
    margin: 0;
}

img {
    max-width: 100%;
}

body {
    min-height: 100vh;
    border-style: dotted;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 28px;
    background-color: #779882;    
}
header i {
    font-size: 2.5em;
}

.green-section{
    background-color: #779882;
    padding-bottom: 2em;
}

h1, .white-text, h3{
   color: white;
   padding-top: 0.5em;
}

.beige-section{
    background-color: #F3F4EF;
    float: left;
}

h2{
    padding: 1em;
}

p{
    padding-right: 1em;
}

/* This is a CSS comment 

aside{
    display: flex;
    margin: 1em;
    background-color: #425348;
    border-radius: 10px;
    float: right;
}

.kontaktform, div{
    display: flex;
    padding: 0 2em 2em;
    border-radius: 5px;

}

.form, label{
    border-radius: 10px;
}
*/


.container, footer{
    display: flex;
    padding: 0 2em 2em;
}
main, aside{
    margin: 1em;
    background-color: #F3F4EF;
}

h4, form{
    color: white;
}

input[type=text], input[type=email], input[type=brugernavn]{
    border-radius: 10px;
    padding: 0.7em;
    border-style: none;
    margin: 0.5em;
}

.nyhed{
    margin-top: 50px;
    background-color: #425348;
    padding: 2em;
    border-radius: 30px;
}

input[type=submit]{
    border-radius: 10px;
    padding: 0.7em;
    border-style: none;
    margin: 0.5em;
    width: 157px;
    background-color: #779882;
    color: white;
}

.white-section{
    padding-right: 5em;
    padding-left: 5em;
    padding-top: 0.3em;
    padding-bottom: 2em;
}

.knap{
    background-color: #779882;  
    padding: 1em; 
    color: white;
    text-decoration: none;
    margin-top: 3em;
    border-radius: 15px;
    display: block;
    width: 300px;
    margin-bottom: 2em;
}

footer{
    display: flex;
    background-color:#425348;
    padding: 2em;
    justify-content: space-around;
}

footer p{
    color: white;
}

